fixed skip bug, fixed mobile-view bug
Fixed bug that shows the wrong amount of skips to the player
Fixed bug that overlaps the "End Playlist" Button on mobile view in browsers

--- a/app/resources/css/style_mobile.css
+++ b/app/resources/css/style_mobile.css
@@ -446,7 +446,7 @@
         cursor: pointer;
         border: none;
         outline: none;
-        bottom: 13vh;
+        bottom: 2vh;
         position: absolute;
         left: 21vw;
         box-shadow: .2vh .3vh .8vh .5vh #1a1a1a;
